syntax = "proto3";

package auth;

option go_package = "github.com/stasdashkevitch/protos;authv1";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutRequest);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse { int64 user_id = 1; }

message LoginRequest {
  string email = 1;
  string passsword = 2;
  int32 app_id = 3;
}

message LoginResponse { string token = 1; }

message LogoutRequest { string token = 1; }

message LogoutResponse { bool success = 1; }
